CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ASSET__c.object
<CustomObject>
    <description>Information about the assets for a case</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Asset</relationshipLabel>
        <relationshipName>T_SBSD_CASE4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_HAS_ASSET__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this household have any assets?</description>
        <label>Does this household have any assets?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBR_LIQUID_AMT__c</fullName>
        <description>Liquid Resource Amount</description>
        <label>Liquid Resource Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_NON_LIQUID_AMT__c</fullName>
        <description>Non-Liquid Resource Amount</description>
        <label>Non-Liquid Resource Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Asset</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Begin_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_BEGIN_EFFV__c  &gt;  DTE_END_EFFV__c</errorConditionFormula>
        <errorMessage>Begin date cannot be greater than the end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Liquid_Amount_if_it_has_assets</fullName>
        <active>true</active>
        <description>Please provide Liquid Resource Amount</description>
        <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c ,!IDN_CASE__r.Is_CBMS_Data__c,IND_HAS_ASSET__c , ISBLANK(NBR_LIQUID_AMT__c) )</errorConditionFormula>
        <errorDisplayField>NBR_LIQUID_AMT__c</errorDisplayField>
        <errorMessage>Please provide Liquid Resource Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Non_Liq_Amount_if_it_has_assets</fullName>
        <active>true</active>
        <description>Please provide Non-Liquid Resource Amount.</description>
        <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c ,!IDN_CASE__r.Is_CBMS_Data__c, IND_HAS_ASSET__c , ISBLANK(NBR_NON_LIQUID_AMT__c) )</errorConditionFormula>
        <errorDisplayField>NBR_NON_LIQUID_AMT__c</errorDisplayField>
        <errorMessage>Please provide Non-Liquid Resource Amount.</errorMessage>
    </validationRules>
</CustomObject>