CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ASSET__c/validationRules/Begin_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>DTE_BEGIN_EFFV__c  &gt;  DTE_END_EFFV__c</errorConditionFormula>
    <errorMessage>Begin date cannot be greater than the end date.</errorMessage>
</ValidationRule>