CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ASSET__c/validationRules/Require_Liquid_Amount_if_it_has_assets.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Liquid_Amount_if_it_has_assets</fullName>
    <active>true</active>
    <description>Please provide Liquid Resource Amount</description>
    <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c ,!IDN_CASE__r.Is_CBMS_Data__c,IND_HAS_ASSET__c , ISBLANK(NBR_LIQUID_AMT__c) )</errorConditionFormula>
    <errorDisplayField>NBR_LIQUID_AMT__c</errorDisplayField>
    <errorMessage>Please provide Liquid Resource Amount</errorMessage>
</ValidationRule>